# backend/webAPI/server/api/models/Report.ts
@@ -1,9 +1,11 @@
 export class Report {
+    year: number
     contributionsOfFaculty: number
     contributionsException: number
-    contributionsFacultyAndByYear: number
+    contributionsFacultyAndByYear: { [facultyId: number]: number };
     contributorsByFacultyAndYear: number
-    constructor(contributionsOfFaculty: number,contributionsException: number, contributionsFacultyAndByYear: number, contributorsByFacultyAndYear: number) {
+    constructor(year: number, contributionsOfFaculty: number,contributionsException: number, contributionsFacultyAndByYear: { [facultyId: number]: number }, contributorsByFacultyAndYear: number) {
+        this.year = year;
         this.contributionsOfFaculty = contributionsOfFaculty;
         this.contributionsException = contributionsException;
         this.contributionsFacultyAndByYear = contributionsFacultyAndByYear;
